--- a/.travis.yml
+++ b/.travis.yml
@@ -401,24 +401,22 @@ script:
     fi
   # ---- cmake build / unit testing ----
   - |
-    if [ "$IGNORE_TESTS" = "ON" ]; then
-      echo "-- Tests not executed on current build --"
+    if [ "$PLATFORM_NAME" = "android64" ]; then
+      cd "./_build/${PLATFORM_NAME}"
+      ninja -j4 || exit 1
+    elif [ "$PLATFORM_NAME" = "ios" ]; then
+      cmake --build "./_build/${PLATFORM_NAME}" --config $BUILD_TYPE --target install || exit 1
     else
-      if [ "$PLATFORM_NAME" = "android64" ]; then
-        cd "./_build/${PLATFORM_NAME}"
-        ninja -j4 || exit 1
-      elif [ "$PLATFORM_NAME" = "ios" ]; then
-        cmake --build "./_build/${PLATFORM_NAME}" --config $BUILD_TYPE --target install || exit 1
+      cd "./_build/${PLATFORM_NAME}"
+      make -j4 || exit 1
+      if [ "$IGNORE_TESTS" = "ON" ]; then
+        echo "-- Tests not executed on current build --"
+      elif [ "$ENABLE_XVFB" = "ON" ]; then
+        xvfb-run --auto-servernum --server-num=1 --server-args="-screen 0 1024x768x24" make test || exit 1
       else
-        cd "./_build/${PLATFORM_NAME}"
-        make -j4 || exit 1
-        if [ "$ENABLE_XVFB" = "ON" ]; then
-          xvfb-run --auto-servernum --server-num=1 --server-args="-screen 0 1024x768x24" make test || exit 1
-        else
-          make test || exit 1
-        fi
-        cd ../..
+        make test || exit 1
       fi
+      cd ../..
     fi
 
 # ---- coverage ----
