feat-hardware: display monitor manager (UIKit impl for iOS)

--- a/hardware/CMakeLists.txt
+++ b/hardware/CMakeLists.txt
@@ -23,17 +23,17 @@ endif()
 # │  File detection                                                  │
 # └──────────────────────────────────────────────────────────────────┘
 if(WIN32 OR WIN64 OR _WIN32 OR _WIN64 OR CMAKE_SYSTEM_NAME STREQUAL "Windows") # win32 (windows)
-    set(_HARDWARE_IGNORED_EXT "_x11.cpp" "_wln.cpp" "_cocoa.cpp" "_cocoa.m" "_ios.cpp" "_andr.cpp")
+    set(_HARDWARE_IGNORED_EXT "_x11.cpp" "_wln.cpp" "_cocoa.cpp" "_cocoa.m" "_ios.cpp" "_ios.m" "_andr.cpp")
 elseif(IOS) # ios (iOS)
     set(_HARDWARE_IGNORED_EXT "_win32.cpp" "_x11.cpp" "_wln.cpp" "_cocoa.cpp" "_cocoa.m" "_andr.cpp")
 elseif(ANDROID) # android
-    set(_HARDWARE_IGNORED_EXT "_win32.cpp" "_x11.cpp" "_wln.cpp" "_cocoa.cpp" "_cocoa.m" "_ios.cpp")
+    set(_HARDWARE_IGNORED_EXT "_win32.cpp" "_x11.cpp" "_wln.cpp" "_cocoa.cpp" "_cocoa.m" "_ios.cpp" "_ios.m")
 elseif(APPLE) # cocoa (macOS)
-    set(_HARDWARE_IGNORED_EXT "_win32.cpp" "_x11.cpp" "_wln.cpp" "_ios.cpp" "_andr.cpp")
+    set(_HARDWARE_IGNORED_EXT "_win32.cpp" "_x11.cpp" "_wln.cpp" "_ios.cpp" "_ios.m" "_andr.cpp")
 elseif(CWORK_LINUX_WAYLAND) # wayland (linux)
-    set(_HARDWARE_IGNORED_EXT "_win32.cpp" "_x11.cpp" "_cocoa.cpp" "_cocoa.m" "_ios.cpp" "_andr.cpp")
+    set(_HARDWARE_IGNORED_EXT "_win32.cpp" "_x11.cpp" "_cocoa.cpp" "_cocoa.m" "_ios.cpp" "_ios.m" "_andr.cpp")
 else() # x11 (linux/unix)
-    set(_HARDWARE_IGNORED_EXT "_win32.cpp" "_wln.cpp" "_cocoa.cpp" "_cocoa.m" "_ios.cpp" "_andr.cpp")
+    set(_HARDWARE_IGNORED_EXT "_win32.cpp" "_wln.cpp" "_cocoa.cpp" "_cocoa.m" "_ios.cpp" "_ios.m" "_andr.cpp")
 endif()
 
 autodetect_source_files("${CMAKE_CURRENT_SOURCE_DIR}/src" "*.[hcm]*")
@@ -49,7 +49,7 @@ if(CWORK_AUTODETECTED_FILES)
         endforeach()
         if(NOT _IGNORED_FILE)
             set(_SOURCE_FILES ${_SOURCE_FILES} ${_file})
-            if(APPLE AND _file MATCHES ".*\\.m$")
+            if((IOS OR APPLE) AND _file MATCHES ".*\\.m$")
                 set(_OBJC_SOURCE_FILES ${_OBJC_SOURCE_FILES} ${_file})
             endif()
         else()
@@ -59,7 +59,7 @@ if(CWORK_AUTODETECTED_FILES)
     unset(CWORK_AUTODETECTED_FILES)
     
     cwork_set_source_files(${_SOURCE_FILES})
-    if(APPLE AND NOT _OBJC_SOURCE_FILES STREQUAL "")
+    if((IOS OR APPLE) AND NOT _OBJC_SOURCE_FILES STREQUAL "")
         cwork_set_source_language(C, ${_OBJC_SOURCE_FILES})
     endif()
 endif()
