--- a/.travis.yml
+++ b/.travis.yml
@@ -271,7 +271,7 @@ jobs:
         - BUILD_TYPE=Release
         - ENABLE_VULKAN=OFF
         - GENERATOR=Xcode
-        - CMAKE_ARGS="-DCWORK_TESTS=OFF -DCWORK_TOOLS=OFF -DCWORK_CPP_REVISION=14 -DCWORK_DUMMY_SOURCES=ON"
+        - CMAKE_ARGS="-DCWORK_TESTS=OFF -DCWORK_CPP_REVISION=14 -DCWORK_DUMMY_SOURCES=ON"
         - CMAKE_PLATFORM_ARGS="-DCMAKE_SYSTEM_NAME=iOS -DCMAKE_OSX_ARCHITECTURES=armv7;armv7s;arm64;i386;x86_64 -DCMAKE_OSX_DEPLOYMENT_TARGET=9.3 -DCMAKE_INSTALL_PREFIX=`pwd`/_install -DCMAKE_XCODE_ATTRIBUTE_ONLY_ACTIVE_ARCH=NO -DCMAKE_IOS_INSTALL_COMBINED=YES"
       addons:
         apt:
@@ -299,7 +299,7 @@ jobs:
         - BUILD_TYPE=Release
         - ENABLE_VULKAN=ON
         - GENERATOR=Ninja
-        - CMAKE_ARGS="-DCWORK_TESTS=OFF -DCWORK_TOOLS=OFF -DCWORK_CPP_REVISION=14 -DCWORK_DUMMY_SOURCES=ON"
+        - CMAKE_ARGS="-DCWORK_TESTS=OFF -DCWORK_CPP_REVISION=14 -DCWORK_DUMMY_SOURCES=ON"
         - ANDROID_TARGET=android-26
         - ANDROID_TARGET_VERSION=26
         - ANDROID_ABI=arm64-v8a
