--- a/time/tools/frame_limiter/CMakeLists.txt
+++ b/time/tools/frame_limiter/CMakeLists.txt
@@ -11,9 +11,11 @@ project("${CWORK_SOLUTION_NAME}.frame_limiter" VERSION ${CWORK_BUILD_VERSION} LA
 # ┌──────────────────────────────────────────────────────────────────┐
 # │  Dependencies                                                    │
 # └──────────────────────────────────────────────────────────────────┘
-cwork_set_internal_libs(time)
 if(ANDROID)
     cwork_set_external_libs("private" android_glue)
+    cwork_set_internal_libs(system time)
+else()
+    cwork_set_internal_libs(time)
 endif()
 
 # ┌──────────────────────────────────────────────────────────────────┐
