--- a/_cmake/templates/AndroidManifest.xml.in
+++ b/_cmake/templates/AndroidManifest.xml.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.${__PROJECT_PACKAGE}" android:versionCode="${__VERSION_REV}" android:versionName="${__VERSION_NAME}" >
-  <uses-sdk android:minSdkVersion="26" />
-  <application android:icon="@drawable/ic_launcher" android:label="${__PROJECT_LABEL}" >
+  <uses-sdk android:minSdkVersion="24" />
+  <application android:icon="@drawable/ic_launcher" android:label="${__PROJECT_LABEL}" android:hasCode="false" >
     <activity android:name="android.app.NativeActivity" 
               android:label="${__PROJECT_LABEL}" 
               android:theme="@android:style/Theme.NoTitleBar" 
