--- a/video/CMakeLists.txt
+++ b/video/CMakeLists.txt
@@ -37,8 +37,9 @@ if(_EXTERN_LIBS)
 endif()
 cwork_set_internal_libs(system thread hardware)
 
+
 # ┌──────────────────────────────────────────────────────────────────┐
-# │  File detection                                                  │
+# │  Helpers                                                         │
 # └──────────────────────────────────────────────────────────────────┘
 set(_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include/video")
 set(_SHADER_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include/shaders")
@@ -77,13 +78,65 @@ macro(pandora_video_autodetect_files category_id)
     unset(CWORK_AUTODETECTED_FILES)
 endmacro()
 
-# general/common files
-set(_INCLUDE_FILES)
-set(_SOURCE_FILES)
-set(_TEST_FILES ${_TEST_DIR}/main.cpp)
-set(_SHADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/build_shaders.py)
 
-# files related to renderers
+# ┌──────────────────────────────────────────────────────────────────┐
+# │  File detection - common files                                   │
+# └──────────────────────────────────────────────────────────────────┘
+if(WIN32 OR WIN64 OR _WIN32 OR _WIN64 OR CMAKE_SYSTEM_NAME STREQUAL "Windows") # win32 (windows)
+    set(_VIDEO_IGNORED_EXT "_x11.cpp" "_wln.cpp" "_cocoa.cpp" "_cocoa.m" "_ios.cpp" "_ios.m" "_andr.cpp")
+elseif(IOS) # uikit (iOS)
+    set(_VIDEO_IGNORED_EXT "_win32.cpp" "_x11.cpp" "_wln.cpp" "_cocoa.cpp" "_cocoa.m" "_andr.cpp")
+elseif(ANDROID) # jni (android)
+    set(_VIDEO_IGNORED_EXT "_win32.cpp" "_x11.cpp" "_wln.cpp" "_cocoa.cpp" "_cocoa.m" "_ios.cpp" "_ios.m")
+elseif(APPLE) # cocoa (macOS)
+    set(_VIDEO_IGNORED_EXT "_win32.cpp" "_x11.cpp" "_wln.cpp" "_ios.cpp" "_ios.m" "_andr.cpp")
+elseif(CWORK_LINUX_WAYLAND) # wayland (linux)
+    set(_VIDEO_IGNORED_EXT "_win32.cpp" "_x11.cpp" "_cocoa.cpp" "_cocoa.m" "_ios.cpp" "_ios.m" "_andr.cpp")
+else() # x11 (linux/unix)
+    set(_VIDEO_IGNORED_EXT "_win32.cpp" "_wln.cpp" "_cocoa.cpp" "_cocoa.m" "_ios.cpp" "_ios.m" "_andr.cpp")
+endif()
+
+autodetect_source_files_no_recurse(${_INCLUDE_DIR} "*.h*") # include
+set(_INCLUDE_FILES ${CWORK_AUTODETECTED_FILES})
+unset(CWORK_AUTODETECTED_FILES)
+
+autodetect_source_files_no_recurse(${_TEST_DIR} "*.[hc]*") # test
+set(_TEST_FILES ${CWORK_AUTODETECTED_FILES})
+unset(CWORK_AUTODETECTED_FILES)
+
+set(_SHADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/build_shaders.py) # shaders
+
+autodetect_source_files_no_recurse(${_SOURCE_DIR} "*.[hcm]*") # src
+if(CWORK_AUTODETECTED_FILES) # filter: remove unwanted system-specific files
+    set(_SOURCE_FILES)
+    set(_OBJC_SOURCE_FILES "")
+    foreach(_file ${CWORK_AUTODETECTED_FILES})
+        foreach(_ignored ${_VIDEO_IGNORED_EXT})
+            if(_file MATCHES ".*${_ignored}$")
+                set(_IGNORED_FILE ON)
+                break()
+            endif()
+        endforeach()
+        if(NOT _IGNORED_FILE)
+            set(_SOURCE_FILES ${_SOURCE_FILES} ${_file})
+            if((IOS OR APPLE) AND _file MATCHES ".*\\.m$")
+                set(_OBJC_SOURCE_FILES ${_OBJC_SOURCE_FILES} ${_file})
+            endif()
+        else()
+            unset(_IGNORED_FILE)
+        endif()
+    endforeach()
+    unset(CWORK_AUTODETECTED_FILES)
+    
+    if((IOS OR APPLE) AND NOT _OBJC_SOURCE_FILES STREQUAL "") # tag objective-C files
+        cwork_set_source_language(C, ${_OBJC_SOURCE_FILES})
+    endif()
+endif()
+
+
+# ┌──────────────────────────────────────────────────────────────────┐
+# │  File detection - renderer-specific files                        │
+# └──────────────────────────────────────────────────────────────────┘
 if(CWORK_VIDEO_OPENGL4)
     set(_INCLUDE_FILES ${_INCLUDE_FILES} ${_INCLUDE_DIR}/api/opengl.h)
     pandora_video_autodetect_files(openGL4)
@@ -95,6 +148,7 @@ if(CWORK_VIDEO_VULKAN)
     set(_INCLUDE_FILES ${_INCLUDE_FILES} ${_INCLUDE_DIR}/api/vulkan.h)
     pandora_video_autodetect_files(vulkan)
 endif()
+
 
 # ┌──────────────────────────────────────────────────────────────────┐
 # │  Project settings                                                │
