feat-cwork: custom cmake framework: add "console" build mode + set "executable" builds in GUI mode

--- a/logic/tools/search_sort_benchmark/CMakeLists.txt
+++ b/logic/tools/search_sort_benchmark/CMakeLists.txt
@@ -22,5 +22,5 @@ endif()
 # │  Project settings                                                │
 # └──────────────────────────────────────────────────────────────────┘
 cwork_set_subproject_type("tools")
-cwork_create_project("executable" "${CWORK_SOLUTION_PATH}/_cmake" "${CWORK_SOLUTION_PATH}/_cmake/modules"
+cwork_create_project("console" "${CWORK_SOLUTION_PATH}/_cmake" "${CWORK_SOLUTION_PATH}/_cmake/modules"
                      "include" "src" "test")
