--- a/_img/test_win32/resources.rc
+++ b/_img/test_win32/resources.rc
@@ -1,5 +1,6 @@
 #include <system/api/windows_version.h>
 #include "resources.h"
 
-IDI_LOGO_ICON    ICON    "logo.ico"
-IDC_BASE_CUR     CURSOR  "base.cur"
+IDI_LOGO_ICON      ICON    "logo.ico"
+IDI_LOGO_BIG_ICON  ICON    "logo_big.ico"
+IDC_BASE_CUR       CURSOR  "base.cur"
