--- a/_cmake/templates/doxyfile.in
+++ b/_cmake/templates/doxyfile.in
@@ -743,7 +743,7 @@ WARN_LOGFILE           =
 # spaces.
 # Note: If this tag is empty the current directory is searched.
 
-INPUT                  = @CMAKE_SOURCE_DIR@/CHANGELOG.md @PROJECT_SOURCE_DIR@/include
+INPUT                  = @CMAKE_SOURCE_DIR@/CHANGELOG.md @CMAKE_SOURCE_DIR@/FEATURES.md @PROJECT_SOURCE_DIR@/include
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
