patch-video: screen-saver disable/restore/notify: fix includes

--- a/video/CMakeLists.txt
+++ b/video/CMakeLists.txt
@@ -118,7 +118,7 @@ if(CWORK_AUTODETECTED_FILES)
         set(_SOURCE_FILES ${CWORK_AUTODETECTED_FILES})
     else()
         foreach(_file ${CWORK_AUTODETECTED_FILES})
-            if(NOT _file MATCHES "*_noapple.cpp")
+            if(NOT _file MATCHES ".*_noapple.cpp")
                 set(_SOURCE_FILES ${_SOURCE_FILES} "${_file}")
             endif()
         endforeach()
