--- a/.travis.yml
+++ b/.travis.yml
@@ -422,5 +422,11 @@ script:
 # ---- coverage ----
 after_success: |
   if [ "$ENABLE_COVERAGE" = "ON" ]; then
-    bash <(curl -s https://codecov.io/bash) -R "${TRAVIS_BUILD_DIR}" || echo "Codecov did not collect coverage reports"
+    wget http://downloads.sourceforge.net/ltp/lcov-1.14.tar.gz
+    tar zvxf lcov-1.14.tar.gz
+    export PATH=lcov-1.14/bin/:${PATH}
+    lcov --capture --directory . --output-file coverage.info
+    lcov --remove coverage.info '_libs/*' '/usr/*' '*gmock*' --output-file coverage.info
+    lcov --list coverage.info
+    bash <(curl -s https://codecov.io/bash) -f coverage.info -t $CODECOV_TOKEN || echo "Codecov did not collect coverage reports"
   fi
