patch-video: message-box + window manager/builder + Direct3D11 renderer: replace std::string usage with LightString (reduce compiled object sizes + reduces overhead)

--- a/video/CMakeLists.txt
+++ b/video/CMakeLists.txt
@@ -38,7 +38,7 @@ endif()
 if(_EXTERN_LIBS)
     cwork_set_external_libs("private" ${_EXTERN_LIBS})
 endif()
-cwork_set_internal_libs(system thread hardware)
+cwork_set_internal_libs(system thread memory hardware)
 
 
 # ┌──────────────────────────────────────────────────────────────────┐
